Add in intro animation

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,64 @@ $color-contrast: #52557e;
 
 $breakpoint-tablet: 800px;
 
+
+// animations
+
+.slide-left{
+    animation-name: slideLeft;
+    -webkit-animation-name: slideLeft;
+
+    animation-duration: 4s;
+    -webkit-animation-duration: 4s;
+
+    animation-timing-function: ease-in-out;
+    -webkit-animation-timing-function: ease-in-out;
+
+    visibility: visible !important;
+    z-index: 1000;
+}
+
+@keyframes slideLeft {
+    0% {
+        left: 0;
+        top: 60%
+    }
+    45% {
+        top: 60%;
+        left: 50%;
+    }
+    55% {
+        top: 45%;
+        left: 50%;
+    }
+    100% {
+        left: 100%;
+        top: 45%;
+    }
+}
+
+@-webkit-keyframes slideLeft {
+    0% {
+        left: 0;
+        top: 60%
+    }
+    45% {
+        top: 60%;
+        left: 50%;
+    }
+    55% {
+        top: 45%;
+        left: 50%;
+    }
+    100% {
+        left: 100%;
+        top: 45%;
+    }
+}
+
+
+
+
 html {
   box-sizing: border-box;
 }
@@ -55,6 +113,25 @@ a {
 p:last-child {
     margin-bottom: 0;
 }
+
+.cover {
+    background-color: $color-primary;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    max-height: 100%;
+    overflow: hidden;
+    background: linear-gradient(to right, darken($color-primary, 5%), lighten($color-primary, 5%));
+}
+
+    .intro-feature {
+        top: 48%;
+        left: 100%;
+        position: absolute;
+    }
 
 .top-decoration {
     background: url('../img/top-lines.png') top left no-repeat, linear-gradient(to right, $color-primary 50%, $color-background 50%);
@@ -202,5 +279,5 @@ p:last-child {
     text-align: center;
     padding: 35px 0;
     box-shadow: inset 0 0 5px 5px darken($color-contrast, 5%);
-    background: url('../img/bottom-lines.png') center center no-repeat $color-contrast;
+    background: url('../img/bottom-lines.png') center center repeat-x $color-contrast;
 }
