--- a/sass/main.scss
+++ b/sass/main.scss
@@ -79,8 +79,8 @@ html {
 
 .cf:before,
 .cf:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " ";
+    display: table;
 }
 
 .cf:after {
@@ -97,6 +97,7 @@ body {
     font-family: "Avenir Next", "helvetica neue", helvetica, sans-serif;
     line-height: 1.66;
     font-size: 14px;
+    min-height: 100%;
 }
 
 a {
@@ -125,7 +126,7 @@ p:last-child {
     right: 0;
     left: 0;
     bottom: 0;
-    max-height: 100%;
+    min-height: 100%;
     overflow: hidden;
     background: linear-gradient(to right, darken($color-primary, 7.5%), lighten($color-primary, 7.5%));
 }
@@ -141,7 +142,7 @@ p:last-child {
     }
 
 .top-decoration {
-    background: url('../img/top-lines.png') top left no-repeat, linear-gradient(to right, $color-primary 50%, $color-background 50%);
+    background: url('../img/top-lines.png') top left no-repeat fixed, linear-gradient(to right, $color-primary 50%, $color-background 50%);
     height: 430px;
     @media (max-width: $breakpoint-tablet) {
         background: url('../img/top-lines.png') top center no-repeat, $color-primary;
@@ -244,7 +245,7 @@ p:last-child {
             text-align: center;
             width: 50%;
             float: left;
-            padding: 5px 0;
+            padding: 10px 0;
             a {
                 color: #333;
                 &:hover {
@@ -280,7 +281,7 @@ p:last-child {
     .post-preview-title {
         line-height: 1.3;
         font-weight: 600;
-        font-size: 22px;
+        font-size: 20px;
         margin: 0;
     }
 
