--- a/sass/animations.scss
+++ b/sass/animations.scss
@@ -1,16 +1,20 @@
-.slide-left{
+.slide-left {
     animation-name: slideLeft;
     -webkit-animation-name: slideLeft;
-
     animation-duration: 4s;
     -webkit-animation-duration: 4s;
-
     animation-timing-function: ease-in-out;
     -webkit-animation-timing-function: ease-in-out;
-
     visibility: visible !important;
     z-index: 1000;
 }
+
+
+.float {
+    -webkit-animation: float 4s ease-in-out infinite;
+    animation: float 4s ease-in-out infinite;
+}
+
 
 @keyframes slideLeft {
     0% {
@@ -52,4 +56,42 @@
         left: 100%;
         top: 45%;
     }
+}
+
+
+
+@-webkit-keyframes float {
+  0% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  50% {
+    -webkit-transform: translateY(10px);
+    transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+}
+
+@keyframes float {
+  0% {
+    -moz-transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+    -o-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  50% {
+    -moz-transform: translateY(10px);
+    -webkit-transform: translateY(10px);
+    -o-transform: translateY(10px);
+    transform: translateY(10px);
+  }
+  100% {
+    -moz-transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+    -o-transform: translateY(0px);
+    transform: translateY(0px);
+  }
 }
