Fix loading animation timing

--- a/sass/animations.scss
+++ b/sass/animations.scss
@@ -1,8 +1,8 @@
 .slide-left {
     animation-name: slideLeft;
     -webkit-animation-name: slideLeft;
-    animation-duration: 4s;
-    -webkit-animation-duration: 4s;
+    animation-duration: 3250ms;
+    -webkit-animation-duration: 3250ms;
     animation-timing-function: ease-in-out;
     -webkit-animation-timing-function: ease-in-out;
     visibility: visible !important;
