Add webfonts with Fonts.com

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,7 +42,8 @@ html {
 body {
     color: #333;
     background-color: $color-background;
-    font-family: "Avenir Next", "helvetica neue", helvetica, sans-serif;
+    //font-family: "Avenir Next", "helvetica neue", helvetica, sans-serif;
+    font-family: "Avenir Next W01", "helvetica neue", helvetica, sans-serif;
     line-height: 1.66;
     font-size: 14px;
     min-height: 100%;
